--- a/FRONTEND/src/components/Header.css
+++ b/FRONTEND/src/components/Header.css
@@ -59,7 +59,7 @@
     align-items: center;
     gap: 6px;
     background-color: #25D366;
-    color: var(--colore-bianco);
+    color:var(--colore-nero);
     padding: 8px 15px;
     border-radius: 20px;
     font-weight: bold;
@@ -88,11 +88,11 @@
 }
 .main-nav a {
     color: var(--colore-bianco);
-    padding: 15px 20px;
+    padding: 15px 30px;
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 0.9em;
+    font-size: 0.95em;
     transition: color 0.3s ease;
     position: relative;
 }
